[gd_scene load_steps=4 format=3 uid="uid://drdudk6huy15l"]

[ext_resource type="Script" uid="uid://dcfj7i5ka3fes" path="res://equip_slot.gd" id="1_nj04p"]
[ext_resource type="Texture2D" uid="uid://cpfi33ggn7ith" path="res://Nasdfew Piskel (6).png" id="2_ppq3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khion"]
size = Vector2(64, 64)

[node name="equip_slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
script = ExtResource("1_nj04p")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_ppq3o")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]
scale = Vector2(2, 2)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_khion")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
